# nuguard

./: .env.example  .gitignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  REWORK_PLAN.md  SECURITY.md  SUPPORT.md  canary.example.json  cognitive_policy.md  nuguard.yaml.example  pyproject.toml
.claude/: settings.json
.claude/agents/: nuguard-test-writer.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: PR Verification Agent.agent.md  architecture-rework-planner.agent.md  debugger.agent.md  production-safe-implementer.agent.md
.github/workflows/: azure-static-web-apps-white-cliff-06a98a30f.yml  azure-swa-docs.yml  deploy-pages.yml  jekyll-gh-pages.yml  pr-tests.yml  publish-pypi.yml  publish-testpypi.yml
docs/: 404.html  CHANGELOG.md  CHANGES.md  Disclaimer.md  behavior-guide.md  cli-reference.md  doc.html  example-openai-cs-agents.md  index.html  llms.txt  policy-engine-guide.md  quick-start.md  red-teaming-guide.md  redteam-design.md  redteam-engine.md  redteam-runtime-sbom-enrichment-overview.md  sample-sbom.json  sbom-schema.md  secure-credential-persistence.md  static-analysis-guide.md  staticwebapp.config.json  style.css  troubleshooting.md  vulnerability-scanning.md
docs/github-actions/: nuguard-audit.yml
docs/llm-runs/: agentic-healthcare-ai.md  ai-webapp-ph1-implementation-plan.md  ai-webapp-redteam-design-v2.md  ai-webapp-redteam-design-v3.md  ai-webapp-redteam-design.md  analyze-design.md  arch.md  aws-bedrock.md  behavior-improvement.md  behavior-prompt.md  behavior-remediation-design.md  behavior-v3-design.md  chatgpt-research.md  deep-research-report.md  finding-triggers-configurable-implementation-plan.md  healthcare-voice-agent.md  interactive-redteam-plan.md  marketing-campaign-validation-analysis.md  messaging.md  nuguard-oss-design.md  policy-implementation-plan.md  prd.md  pyrit-endpoint-techniques.md  redteam-agent-design.md  redteam-design-v2-improvements.md  redteam-e2e-scenarios.md  redteam-gap-analysis-plan.md  redteam-implementation-plan.md  redteam-improvement-implementation.md  redteam-improvement.md  redteam-llm-augmentation-plan.md  redteam-prd-lite.md  redteam-prd.md  redteam-tests-design.md  redteam-v2.md  redteam-v3-design.md  redteam-v4-design.md  scenarios.md  unified-tool.md  user-experience.md  (+1 more)
nuguard/: __init__.py  config.py
nuguard/analysis/: __init__.py  _atlas_data.py  _cdx.py  grype_client.py  models.py  osv_client.py  plugin_base.py  static_analyzer.py
nuguard/behavior/: __init__.py  _utils.py  alignment.py  analyzer.py  coverage.py  credentials.py  intent.py  judge.py  judge_cache.py  models.py  prompt_cache.py  recommendations.py  remediation.py  report.py  runner.py  scenarios.py
nuguard/cli/: __init__.py  common.py  main.py  report_meta.py
nuguard/common/: __init__.py  auth.py  auth_runtime.py  auto_sbom_enricher.py  bootstrap.py  ces_client.py  console.py  credentials.py  endpoint_probe.py  errors.py  http.py  json_utils.py  llm_client.py  logging.py  rate_limit.py  secret_store.py  target_client_builder.py  turn_helpers.py
nuguard/db/: __init__.py  local.py  postgres.py
nuguard/graph/: __init__.py  enricher.py  graph_builder.py  graph_serializer.py  graph_store.py  mapper.py
nuguard/models/: __init__.py  attack_graph.py  exploit_chain.py  finding.py  health_report.py  policy.py  sbom.py  scan.py  validate.py
nuguard/output/: __init__.py  json_generator.py  markdown_generator.py  pytest_emitter.py  sarif_generator.py
nuguard/policy/: __init__.py  aibom_snapshot.py  assessment.py  ccd_parser.py  checker.py  compiler.py  evaluator.py  loader.py  parser.py  scoring.py  synthesizer.py  validator.py
nuguard/redteam/: __init__.py  report.py
nuguard/sbom/: __init__.py  ast_parser.py  cdx_tools.py  cli.py  config.py  deps.py  enricher.py  extractor.py  generator.py  llm_client.py  merger.py  models.py  normalization.py  parser.py  serializer.py  types.py  validator.py
nuguard/sbom.claude/: generator.py  parser.py  validator.py
nuguard/sbom/tests/fixtures/apps/code_review_crew/: crew.py  pyproject.toml
nuguard/sbom/tests/fixtures/apps/customer_service_bot/: agents.py  pyproject.toml
nuguard/sbom/tests/fixtures/apps/rag_pipeline/: pipeline.py  pyproject.toml
nuguard/validate/: runner.py  scenarios.py
tests/: conftest.py  nuguard.yaml  run_deployed_redteam.sh  run_redteam.py  run_redteam_validation.py  test_config.py  test_llm_client.py  test_nuguard_config.py  test_run_redteam_validation.py  test_secret_store.py
tests/.claude/: settings.local.json
tests/agentic-healthcare-ai/: agentic-healthcare.sbom.json  agentic-healthcare.sbom.md  agentic-test.sh  cognitive_policy.json  healthcare-policy-check.md  nuguard.yaml
tests/benchmark/: __init__.py  evaluate.py  evaluate_risk.py  evaluate_streaming.py  fetcher.py  scan_with_cli.py  schemas.py  schemas_risk.py  test_analyze_e2e.py  test_basic.py  test_policy_fixtures.py  test_redteam_cli.py
tests/cli/: test_init_cli.py  test_policy_cli.py  test_report_meta.py  test_sbom_cli.py  test_target_command.py  test_target_command_runtime.py  test_validate_command.py
tests/common/: test_auth_config.py  test_auth_runtime.py  test_auto_sbom_enricher.py  test_bootstrap.py  test_credentials.py  test_health_report.py  test_json_utils.py  test_llm_client_kwargs.py  test_target_client_builder.py  test_turn_helpers.py
tests/healthcare-voice-agent/: cognitive_policy.json  cognitive_policy.md  healthcare-policy-check.md  healthcare-redteam.txt  healthcare-test.sh  healthcare-validation.md  healthcare.sbom.json  healthcare.sbom.md  nuguard.yaml
tests/redteam/: __init__.py  app_runner.py  conftest.py  report.py  test_app_env_detector.py  test_auto_sbom_enricher.py  test_chat_config_discovery.py  test_conversation_director.py  test_e2e_redteam.py  test_finding_triggers.py  test_google_adk_adapter.py  test_guided_executor.py  test_new_scenarios.py  test_sbom_driven_scenarios.py
tests/sbom/: conftest.py  test_models.py  (+26 more)
tmp/: test-results.txt  typecheck-results.txt
(+932 files in other folders)
