[tool.poetry]
name = "code-review-crew"
version = "0.1.0"
description = "Automated multi-framework code review pipeline"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.80.0"
pyautogen = "^0.3.0"
anthropic = "^0.30.0"
openai = "^1.30.0"
pydantic = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
ruff = "^0.4"
