[project]
name = "rag-pipeline"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.11.0",
    "llama-index-llms-anthropic>=0.3.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "pydantic>=2.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
